--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
 # Hi, I'm Amitesh Tripathi
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+I talk about Data Science, AI, ML, Entrepreneurship, Business and more!
