Changed the About Section

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,11 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> Thanks for visiting my profile!
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+I'm Amitesh Tripathi, a passionate and dedicated Data Analytics Engineering Master's candidate at Northeastern University, Boston, USA, and an ex-professional from Capgemini. With a strong foundation in computer science from Rajiv Gandhi Technical University, Bhopal, India, I've honed my skills in data analytics, machine learning, and artificial intelligence.
+
+I bring to the table a blend of academic knowledge and over a year of hands-on experience in the industry. My expertise lies in Python, R, MATLAB, Java, C++, and JavaScript, and I'm proficient in data analysis tools like Flourish, DataWrapper, Tableau, and Power BI. I have a deep understanding of machine learning algorithms and have worked extensively with databases like MySQL, PostgreSQL, SQL Server, Spark, and Hive.
+
+At Capgemini, I implemented chatbot automation using PowerAutomate, reducing support tickets by a significant margin. I also executed over 200 SQL queries in Python to extract and update files to the database using MySQL and Oracle Database. At Aasmo Digital Pvt. Ltd., I contributed to the creation of a predictive model to identify potential returning clients, achieving an accuracy of 89% and resulting in a 20% increase in returning clients.
+
+I'm not just about numbers and data; I'm about leveraging them to create real-world impact. I'm always eager to take on new challenges and opportunities where I can apply my data analytics skills to drive business growth and innovation. Feel free to reach out to me at 1amiteshtripathi@gmail.com or through LinkedIn.
