Changed Contact Section

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,20 @@
-## Get in touch
+## Get in Touch
 
-Visit [my website](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) or find me on other platforms: [Twitter](https://www.twitter.com/lekoarts_de) & [LinkedIn](https://www.linkedin.com/in/lennart-joergens/)
+<Box sx={{ mt: 4, mb: 4 }}>
+  <Text as="p">
+    I'd love to hear from you! Whether you have a question, want to discuss a project, or just want to say hi, feel free to reach out.
+  </Text>
+
+  <Text as="p">
+    You can email me at <Link href="mailto:1amiteshtripathi@gmail.com">1amiteshtripathi@gmail.com</Link> or call me at <Link href="tel:857-376-1991">857-376-1991-</Link>.
+  </Text>
+
+  <Text as="p">
+    You can also find me on:
+    <ul>
+      <li><Link href="https://twitter.com/HeyAmitesh">Twitter</Link></li>
+      <li><Link href="https://linkedin.com/in/theamiteshtripathi">LinkedIn</Link></li>
+      <li><Link href="https://github.com/theamiteshtripathi">GitHub</Link></li>
+    </ul>
+  </Text>
+</Box>
