Updated Contact Section

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,20 +1,11 @@
-## Get in Touch
+## Get in touch
 
-<Box sx={{ mt: 4, mb: 4 }}>
-  <Text as="p">
-    I'd love to hear from you! Whether you have a question, want to discuss a project, or just want to say hi, feel free to reach out.
-  </Text>
+I'd love to hear from you! Whether you have a question, want to discuss a project, or just want to say hi, feel free to reach out.
 
-  <Text as="p">
-    You can email me at <Link href="mailto:1amiteshtripathi@gmail.com">1amiteshtripathi@gmail.com</Link> or call me at <Link href="tel:857-376-1991">857-376-1991-</Link>.
-  </Text>
+You can email me at [1amiteshtripathi@gmail.com](mailto:1amiteshtripathi@gmail.com) or call me at +1 857-376-1991.
 
-  <Text as="p">
-    You can also find me on:
-    <ul>
-      <li><Link href="https://twitter.com/HeyAmitesh">Twitter</Link></li>
-      <li><Link href="https://linkedin.com/in/theamiteshtripathi">LinkedIn</Link></li>
-      <li><Link href="https://github.com/theamiteshtripathi">GitHub</Link></li>
-    </ul>
-  </Text>
-</Box>
+You can also find me on:
+
+- [Twitter](https://twitter.com/HeyAmitesh)
+- [LinkedIn](https://linkedin.com/in/theamiteshtripathi)
+- [GitHub](https://github.com/theamiteshtripathi)
